@@ -1,5 +1,6 @@
 Changelog for CmdArgs
 
+    Add ignore annotation for modes and flags
     #350, make top-level help appear properly
 0.5
     #351, name/explicit attributes on mode were broken (regression)
